<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="profileViewModel"
            type="com.google.samples.quickstart.canonical.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileFragment">

        <RelativeLayout
            android:id="@+id/usr_img_and_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_bg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/usr_img_card"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="250dp">

                <ImageView
                    android:id="@+id/usr_img"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_baseline_person_24" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/usr_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/usr_img_card"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-light"
                android:text="@{profileViewModel.getUserName()}"
                android:textColor="@android:color/white"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/usr_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/usr_name"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:fontFamily="sans-serif-light"
                android:text="@{profileViewModel.getUserEmail()}"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/usr_statistic_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/profile_statistic_bar_bg"
            app:layout_constraintTop_toBottomOf="@id/usr_img_and_name">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/usr_run_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@{profileViewModel.getTimeHMSMutableLiveData()}"
                        android:textColor="@android:color/white"
                        android:textSize="30sp" />

                    <TextView
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/total_time"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/usr_run_energy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:fontFamily="sans-serif-light"
                        android:text="@{profileViewModel.getTotalEnergyCaloriesMutableLiveData()}"
                        android:textColor="@android:color/white"
                        android:textSize="30sp" />

                    <TextView
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/total_energy"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/refresh_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_refresh_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/logout_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_exit_to_app_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/run_history_list_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usr_statistic_bar"
            app:layout_constraintVertical_weight="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>