<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/single_run_datetime"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="2020-08-08 19:51:26"
        android:textSize="20sp"

        />

    <TextView
        android:id="@+id/single_run_time"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fontFamily="sans-serif-light"
        android:textSize="30sp"
        android:text="00:00:00"
        android:gravity="center"
        />
</LinearLayout>