<resources>
    <string name="app_name">WeRun</string>
    <string name="navigation_menu_run">Run</string>
    <string name="navigation_menu_map">Map</string>
    <string name="navigation_menu_me">Me</string>
    <string name="hello_blank_fragment">This is Run fragment</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="working">Started</string>
    <string name="stopped">Stopped</string>
    <string name="my_location_title">My location</string>
    <string name="cannot_access_location">Cannot access location now. Please Try later</string>
    <string name="logout_button_text">Logout</string>
    <string name="sign_out_failed">SignOut Failed. Please try again.</string>
    <string name="login_failed">Login Failed. Please try it again.</string>
    <string name="total_time">TOTAL TIME</string>
    <string name="total_energy">CALORIES</string>
    <string name="usr_run_energy">240</string>
    <string name="usr_run_time">00:00:00</string>
    <string name="usr_email">User Email</string>
    <string name="usr_name">User name</string>
    <string name="submit">Submit</string>
    <string name="submit_confirm_dialog_message">Do you want to submit this record ?</string>
    <string name="dialog_confirm_button">Confirm</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="submit_confirm_dialog_title">Submission Confirm</string>
    <string name="submit_illegal">Start your running before submission.</string>
    <string name="welcome"><b>We</b>lcome, <b>Run</b>ner!</string>
</resources>