...
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:src="@drawable/ic_baseline_refresh_24"
                 />

            <ImageButton
                android:id="@+id/start_pause_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:src="@{stopwatchViewModel.getIsStopwatchWorkingMutableLiveData()?@drawable/ic_baseline_pause_24  : @drawable/ic_baseline_timer_24}"
                />


            <ImageButton
                android:id="@+id/submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:src="@drawable/ic_baseline_send_24"
                />
...
